Внес изменения в работу